Deletion of RStudio Cloud information

--- a/course-materials/hw-instructions/hw-01/hw-01-pet-names.Rmd
+++ b/course-materials/hw-instructions/hw-01/hw-01-pet-names.Rmd
@@ -66,7 +66,7 @@ Before you can get started with the analysis, you need to make sure you:
 
 -   are a member of the course GitHub organization
 
--   are a member of the course RStudio Cloud space
+-   have RStudio configured
 
 If you failed to confirm any of these, it means you have not yet completed the prerequisites for this assignment.
 Please go back to [Prerequisites] and complete them before continuing the assignment.
@@ -77,13 +77,14 @@ Please go back to [Prerequisites] and complete them before continuing the assign
 **IMPORTANT:** If there is no GitHub repo created for you for this assignment, it means I didn't have your GitHub username as of when I assigned the homework. Please let me know your GitHub username asap, and I can create your repo.
 ```
 
-For each assignment in this course you will start with a GitHub repo that I created for you and that contains the starter documents you will build upon when working on your assignment.
+For each assignment in this course, you will start with forking a GitHub repo located under the 'Repositories' tab in our GitHub Team section.
+The repo contains the starter documents you will build upon when working on your assignment.
 The first step is always to bring these files into RStudio so that you can edit them, run them, view your results, and interpret them.
 This action is called **cloning**.
 
 Then you will work in RStudio on the data analysis, making **commits** along the way (snapshots of your changes) and finally **push** all your work back to GitHub.
 
-The next few steps will walk you through the process of getting information of the repo to be cloned, cloning your repo in a new RStudio Cloud project, and getting started with the analysis.
+The next few steps will walk you through the process of getting information of the repo to be cloned, cloning your repo in a new RStudio project, and getting started with the analysis.
 
 ### Step 1. Get URL of repo to be cloned
 
@@ -94,29 +95,10 @@ knitr::include_graphics("img/clone-repo-link.png")
 On GitHub, click on the green **Code** button, select **HTTPS** (this might already be selected by default, and if it is, you'll see the text *Use Git or checkout with SVN using the web URL* jas in the image on the right).
 Click on the clipboard icon 📋 to copy the repo URL.
 
-### Step 2. Go to RStudio Cloud
+### Step 2. Go to RStudio and clone the repo
 
-Go to [rstudio.cloud](https://rstudio.cloud/ "RStudio Cloud") and then **navigate to the course workspace** via the left sidebar.
-It's very important that you do this for two reasons:
-
--   It's only when you're in the course workspace that you'll be able to benefit from R packages I've pre-installed for you so that your project can be configured correctly.
--   It's only when you're in the course workspace that your usage of RStudio Cloud won't count towards the free usage limits.
-
-```{r course-workspace, fig.margin = TRUE, echo = FALSE, eval = TRUE}
-knitr::include_graphics("img/course-workspace.png")
-```
-
-Before you proceed, confirm that you are in the course workspace by checking out what's on your top bar in RStudio Cloud.
-
-### Step 3. Clone the repo
-
-In RStudio, click on the **down arrow** next to New Project and then choose **New Project from Git Repository**.
-
-In the pop-up window, **paste the URL** you copied from GitHub, make sure the box for **Add packages from the base project** is checked (it should be, by default) and then click **OK**.
-
-```{r new-project-from-git, echo = FALSE, eval = TRUE, fig.align = "left"}
-knitr::include_graphics("img/new-project-from-git.png")
-```
+Go to RStudio and create a **New Project from Git Repo**.
+You will need to click on **New Project** --\> **Version Control** --\> **Git** --\> and paste repo url in 'Ropository URL' field.
 
 # Hello RStudio!
 
@@ -184,7 +166,7 @@ This might feel cumbersome.
 Bear with me... I *will* teach you how to save your password so you don't have to enter it every time.
 But for this one assignment you'll have to manually enter each time you push in order to gain some experience with it.
 
-**Thought exercise:** Which of the above steps (updating the YAML, committing, and pushing) needs to talk to GitHub?[^hw-01-pet-names-1]
+**Thought exercise:** Which of the above steps (updating the YAML, committing, and pushing) needs to talk to GitHub?[^1]
 
 # Packages
 
@@ -349,4 +331,4 @@ ggplot(comb_name_props, aes(x = cat_prop, y = dog_prop)) +
 
 🧶 ✅ ⬆️ *Now is a good time to commit and push your changes to GitHub with an appropriate commit message. Commit and push all changed files so that your Git pane is cleared up afterwards. Make sure that your last push to the repo comes before the deadline. You should confirm that what you committed and pushed are indeed in your repo that we will see by visiting your repo on GitHub.*
 
-[^hw-01-pet-names-1]: Only pushing requires talking to GitHub, this is why you're asked for your password at that point.
+[^1]: Only pushing requires talking to GitHub, this is why you're asked for your password at that point.
