Course operation update: replacing all with GitHub

--- a/course-materials/_slides/u1-d03-toolkit-git/u1-d03-toolkit-git.Rmd
+++ b/course-materials/_slides/u1-d03-toolkit-git/u1-d03-toolkit-git.Rmd
@@ -30,11 +30,7 @@ library(lubridate)
 .pull-left[
 ### .gray[Course operation]
 .gray[
-- introds.org
-- Learn
-- Zoom
-- Teams
-- Piazza
+- GitHub
 ]
 ]
 .pull-right[
